Use an Ed Tufte video about iPhones for our example YouTube embed

--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
         <p>One obstacle to creating elegant figures on the web is the difficulty of handling different screen sizes, especially on the fly. Embedded <code>iframe</code> elements are particularly troublesome. For these instances we provide a helper class, <code>iframe-wrapper</code>, the most common use for which is probably YouTube videos, e.g.</p>
         <pre class="code">
 &lt;figure class="iframe-wrapper"&gt;
-  &lt;iframe width="560" height="315" src="https://www.youtube.com/embed/uBYPqb83C7k" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;
+  &lt;iframe width="853" height="480" src="https://www.youtube.com/embed/YslQ2625TR4" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;
 &lt;/figure&gt;
         </pre>
         <figure class="iframe-wrapper">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/uBYPqb83C7k" frameborder="0" allowfullscreen></iframe>
+          <iframe width="853" height="480" src="https://www.youtube.com/embed/YslQ2625TR4" frameborder="0" allowfullscreen></iframe>
         </figure>
-        <p>You can use this class on a <code>div</code> instead of a <code>figure</code>, with slightly different results but the same general effect. Choose depending on your application.</p>
+        <p>You can use this class on a <code>div</code> instead of a <code>figure</code>, with slightly different results but the same general effect. Experiment and choose depending on your application.</p>
       </section>
 
       <section>
