Update default table styling

--- a/index.html
+++ b/index.html
@@ -154,6 +154,42 @@
       </section>
 
       <section>
+        <h2 id="tables">Tables</h2>
+        <p>Tufte CSS also provides support for basic table layouts:</p>
+        <table>
+          <thead>
+            <tr>
+              <td>Cities</td>
+              <td>Numbers</td>
+              <td>Animals</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Toronto</td>
+              <td>13</td>
+              <td>Tiger</td>
+            </tr>
+            <tr>
+              <td>New York</td>
+              <td>27</td>
+              <td>Elephant</td>
+            </tr>
+            <tr>
+              <td>Berlin</td>
+              <td>756</td>
+              <td>Monkey</td>
+            </tr>
+            <tr>
+              <td>Moscow</td>
+              <td>233</td>
+              <td>Rhino</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section>
         <h2 id="epilogue">Epilogue</h2>
         <p>Many thanks go to Edward Tufte for leading the way with his work. It is only through his kind and careful editing that this project accomplishes what it does. All errors of implementation are of course mine.</p>
       </section>
